; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_term.c_clear_termcodes.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_term.c_clear_termcodes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_3__* }

@tc_len = common dso_local global i64 0, align 8
@termcodes = common dso_local global %struct.TYPE_3__* null, align 8
@tc_max_len = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@need_gather = common dso_local global i32 0, align 4
@BC = common dso_local global i8* null, align 8
@NUL = common dso_local global i32 0, align 4
@PC = common dso_local global i32 0, align 4
@UP = common dso_local global i8* null, align 8
@empty_option = common dso_local global i64 0, align 8
@ospeed = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clear_termcodes() #0 {
  br label %1

1:                                                ; preds = %4, %0
  %2 = load i64, i64* @tc_len, align 8
  %3 = icmp ugt i64 %2, 0
  br i1 %3, label %4, label %12

4:                                                ; preds = %1
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @termcodes, align 8
  %6 = load i64, i64* @tc_len, align 8
  %7 = add i64 %6, -1
  store i64 %7, i64* @tc_len, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = call i32 @vim_free(%struct.TYPE_3__* %10)
  br label %1

12:                                               ; preds = %1
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** @termcodes, align 8
  %14 = call i32 @vim_free(%struct.TYPE_3__* %13)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** @termcodes, align 8
  store i64 0, i64* @tc_max_len, align 8
  %15 = load i32, i32* @TRUE, align 4
  store i32 %15, i32* @need_gather, align 4
  ret void
}

declare dso_local i32 @vim_free(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
